src/examples/valid/non-plot/for.ra
func main(): void {
  b = 5;
  for (a = 1 to b + 1) {
    c = a;
    print(c);
  }
  print(a, b);
}
