src/examples/invalid/static/invalid-cast.ra
func main(): void {
  a = NOT "2";
}
